force-app/main/default/objects/Project_Snapshots__c/Project_Snapshots__c.object-meta.xml
<CustomObject>
    <label>Project_Snapshots</label>
    <nameField>
        <label>Project_Snapshots</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project_Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>