force-app/main/default/objects/Project_Snapshots__c/fields/Billable_Hours_External__c.field-meta.xml
<CustomField>
    <fullName>Billable_Hours_External__c</fullName>
    <label>Billable Hours (External)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>