force-app/main/default/objects/Project_Snapshots__c/fields/Estimated_At_Completion__c.field-meta.xml
<CustomField>
    <fullName>Estimated_At_Completion__c</fullName>
    <label>Estimated At Completion</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>