force-app/main/default/objects/Project_Snapshots__c/fields/Estimated_Hours_at_Completion__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours_at_Completion__c</fullName>
    <label>Estimated Hours at Completion</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>