force-app/main/default/objects/Project_Snapshots__c/fields/Hours_Cut_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Hours_Cut_Off_Date__c</fullName>
    <label>Hours Cut Off Date</label>
    <type>Date</type>
</CustomField>