force-app/main/default/objects/Project_Snapshots__c/fields/Percent_Hours_Complete__c.field-meta.xml
<CustomField>
    <fullName>Percent_Hours_Complete__c</fullName>
    <label>Percent Hours Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>