force-app/main/default/objects/Project_Snapshots__c/fields/Percent_Time_Used__c.field-meta.xml
<CustomField>
    <fullName>Percent_Time_Used__c</fullName>
    <label>Percent Time Used</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>