force-app/main/default/objects/Project_Snapshots__c/fields/Percentage_Used__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Used__c</fullName>
    <label>Percentage Used</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>