force-app/main/default/objects/Project_Snapshots__c/fields/Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Planned_Hours__c</fullName>
    <label>Planned Hours</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>