force-app/main/default/objects/Project_Snapshots__c/fields/ProjectId__c.field-meta.xml
<CustomField>
    <fullName>ProjectId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Project Snapshot</relationshipLabel>
    <relationshipName>Project_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>