force-app/main/default/objects/Project_Snapshots__c/fields/Scheduled_Hours_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Hours_Remaining__c</fullName>
    <label>Scheduled Hours Remaining</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>