force-app/main/default/objects/Project_Snapshots__c/fields/Tasks_Total_Percent_Complete_Points__c.field-meta.xml
<CustomField>
    <fullName>Tasks_Total_Percent_Complete_Points__c</fullName>
    <label>Tasks Total Percent Complete (Points)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>