force-app/main/default/objects/Project_Snapshots__c/fields/Total_Number_of_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Tasks__c</fullName>
    <label>Total Number of Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>