force-app/main/default/objects/Project_Snapshots__c/fields/Total_Submitted_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Submitted_Hours__c</fullName>
    <label>Total Submitted Hours</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>