force-app/main/default/objects/Project_Snapshots__c/fields/Variance_at_Completion__c.field-meta.xml
<CustomField>
    <fullName>Variance_at_Completion__c</fullName>
    <label>Variance at Completion</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>