force-app/main/default/objects/Project_Snapshots__c/fields/Variance_from_Plan__c.field-meta.xml
<CustomField>
    <fullName>Variance_from_Plan__c</fullName>
    <label>Variance from Plan</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>