force-app/main/default/objects/Project_Snapshots__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Actual_Hours__c</columns>
    <columns>Billable_Hours_External__c</columns>
    <columns>Billable_Hours_Internal__c</columns>
    <columns>Estimated_At_Completion__c</columns>
    <columns>Estimated_Hours_at_Completion__c</columns>
    <columns>Excluded_Hours__c</columns>
    <columns>Hours_Cut_Off_Date__c</columns>
    <columns>Hours_Exclude_from_Billing__c</columns>
    <columns>Percentage_Used__c</columns>
    <columns>Percent_Hours_Complete__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>